# tasker

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  tasker
cli/include/: Task.h  TodoManager.h
cli/src/: Display.cpp  main.cpp
include/: Display.h  Task.h  TodoManager.h  TodoParser.h
src/: Display.cpp  Task.cpp  TodoManager.cpp  TodoParser.cpp  main.cpp
web/: .air.toml  Dockerfile  go.sum
web/cmd/tasker-watch/: main.go
web/cmd/tasker-web/: main.go  main_test.go
web/internal/api/: api.go  api_test.go
web/internal/config/: config.go  config_test.go
web/internal/db/: db.go
web/internal/draft/: draft.go  draft_test.go
web/internal/parser/: parser.go  parser_test.go
web/internal/scheduler/: scheduler.go  scheduler_test.go
web/internal/store/: store.go  store_test.go
web/internal/task/: task.go
web/internal/telegram/: inbound.go  inbound_test.go  telegram.go
web/internal/watcher/: watcher.go  watcher_test.go
